force-app/main/default/objects/Project__c/fields/Flag_Flow__c.field-meta.xml
<CustomField>
    <fullName>Flag_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Flow</label>
    <type>Checkbox</type>
</CustomField>