force-app/main/default/objects/Project__c/fields/Flag_To_Completed__c.field-meta.xml
<CustomField>
    <fullName>Flag_To_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to stop a completed project being set back to in progress</description>
    <label>Flag To Completed</label>
    <type>Checkbox</type>
</CustomField>