force-app/main/default/objects/Project__c/fields/IsDateStart__c.field-meta.xml
<CustomField>
    <fullName>IsDateStart__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDateStart</label>
    <type>Checkbox</type>
</CustomField>