force-app/main/default/objects/Project__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <label>PM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>