force-app/main/default/objects/Project__c/fields/Prevent_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Prevent_In_Progress__c</fullName>
    <description>Flag used to prevent in Progress given different situations</description>
    <label>Prevent In Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>