force-app/main/default/objects/Project__c/fields/Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Project_Hours__c</fullName>
    <label>Project Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>