force-app/main/default/objects/Project__c/fields/Total_Assined_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Assined_Hours__c</fullName>
    <label>Total Assined Hours</label>
    <summarizedField>Project_Resource__c.Hours_Assigned_Resource__c</summarizedField>
    <summaryForeignKey>Project_Resource__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>