force-app/main/default/objects/Project__c/fields/Uncompleted_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Uncompleted_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uncompleted Tasks</label>
    <type>Checkbox</type>
</CustomField>