force-app/main/default/objects/Project__c/validationRules/Editing_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Editing_Project</fullName>
    <active>false</active>
    <description>Check the Project&apos;s status before allowing to edit fields. Can only be edited if the status is Pre-Kickoff.</description>
    <errorConditionFormula>IF(
ISPICKVAL(Status__c, &quot;In Progress&quot;) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Pre-Kickoff&quot;)),
True,
False
)</errorConditionFormula>
    <errorMessage>Project details can&apos;t be edited once they enter In-Progress stage.</errorMessage>
</ValidationRule>