force-app/main/default/objects/Project__c/validationRules/In_Progress_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_Hours</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Prevent_In_Progress__c, &quot;2&quot;)</errorConditionFormula>
    <errorMessage>Assigned Hours must be equal to the hours of the project.</errorMessage>
</ValidationRule>