force-app/main/default/objects/Project__c/validationRules/In_Progress_Profit.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_Profit</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Prevent_In_Progress__c, &quot;3&quot;)</errorConditionFormula>
    <errorMessage>Project must be profitable to be in progress.</errorMessage>
</ValidationRule>