force-app/main/default/objects/Project__c/validationRules/In_Progress_SL.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_SL</fullName>
    <active>true</active>
    <description>Prevents a project being set to in progress if it doesnt have a squad lead</description>
    <errorConditionFormula>ISPICKVAL(Prevent_In_Progress__c, &quot;1&quot;)</errorConditionFormula>
    <errorMessage>The Project doesn&apos;t have a Squad Lead. Assign one to continue</errorMessage>
</ValidationRule>