force-app/main/default/objects/Project__c/validationRules/Prevent_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_In_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;In Progress&quot;),
Flag_To_Completed__c,
ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&apos;t change the STATUS back to in progress once the project is completed</errorMessage>
</ValidationRule>