force-app/main/default/objects/Project__c/validationRules/prevent_kickoff.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_kickoff</fullName>
    <active>true</active>
    <description>Prevents a project being set back to kick-off if it is in progress or completed.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Pre-Kickoff&quot;),
Flag_Flow__c,
OR(
ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;In Progress&quot;)
)
)</errorConditionFormula>
    <errorMessage>Projects can&apos;t be set back to kick-off if they are in progress or completed.</errorMessage>
</ValidationRule>