force-app/main/default/objects/Project__c/validationRules/Validate_Tasks.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Tasks</fullName>
    <active>true</active>
    <errorConditionFormula>Uncompleted_Tasks__c</errorConditionFormula>
    <errorMessage>There are unfinished tasks in the project.</errorMessage>
</ValidationRule>